--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre o Criador - Jovens do Campo à Cidade</title>
-    <link rel="stylesheet" href="INDEX.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
